# cz-nas

./: .gitignore  README.md
nas-server/: Cargo.toml  config.json  init_db.sql  server.db
nas-server/src/: amid.rs  db.rs  gnid.rs  json.rs  main.rs  svces.rs  time.rs  types.rs  ws.rs
nas-server/web/: index.html
nas-server/web/assets/: index-BIxKqemK.js  index-CQR_wSWa.css
nas-web/: README.md  package-lock.json  package.json  s.js
nas-web/src/: App.vue
nas-web/src/assets/: main.css
nas-web/src/components/: AlertSys.vue  ContextMenu.vue  CurrentTime.vue  FileContextMenu.vue  FileExploer.vue  FileExplorerMenu.vue  FileItem.vue  FolderTreeItem.vue  SettingApp.vue  TaskBar.vue  TaskMenu.vue  WebPlayer.vue  WinSys.vue  WrapSection.vue
nas-web/src/router/: index.js
nas-web/src/util/: func.js  globel.js
nas-web/src/views/: LoginView.vue  MainApp.vue
