[package]
name = "punch-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.10.2"
actix-ws = "0.3.0"
blake3 = "1.7.0"
chrono = "0.4.40"
dashmap = "6.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.15" ,features = ["tokio1-native-tls"] }
rand = "0.9.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
sysinfo = "0.34.2"
tokio = { version = "1.44.1", features = ["full"] }
uuid = "1.16.0"
